--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -44,8 +44,8 @@ template(name='model_doc_view')
                     //         i.chevron.left.icon
                     //     |View #{model}
                     if can_edit
-                        a.ui.big.blue.circular.icon.button(href="/m/#{model}/#{_id}/edit")
-                            i.pencil.icon
+                        a.ui.big.basic.circular.icon.button(href="/m/#{model}/#{_id}/edit" title='Edit')
+                            i.blue.pencil.icon
                     .ui.small.header Timestamp Tags
                     each _timestamp_tags
                         .ui.circular.basic.label #{this}
