--- a/client/fields.jade
+++ b/client/fields.jade
@@ -459,9 +459,9 @@ template(name='children_edit')
     .ui.button.add_child
         i.plus.icon
         |Add Child #{ref_model}
-    .ui.styled.fluid.accordion
-        each children
-            +child_edit
+    //- .ui.styled.fluid.accordion
+    each children
+        +child_edit
 
 
 template(name='child_edit')
@@ -469,21 +469,22 @@ template(name='child_edit')
         i.dropdown.icon
         |#{rank} #{title} #{title}
     .content
-        each fields
-            +Template.dynamic template=edit_template 
-        div
-        +remove_button
+        .ui.red.segment
+            each child_fields
+                |#{key}
+                +Template.dynamic template=edit_template 
+                +remove_button
+        //-     +text_edit key='key'
+        //-     +text_edit key='field'
+        //-     +single_doc_edit key='field' ref_model='field_type' ref_key='slug' label='Field Type'
+        //-     +text_edit key='label'
+        //-     +text_edit key='icon'
+        //-     if icon
+        //-         i.big.icon(class=icon)
+        //- div
 
-        // .ui.red.segment
-        //     +text_edit key='key'
-        //     // +text_edit key='field'
-        //     +single_doc_edit key='field' ref_model='field' ref_key='slug' label='Field Type'
-        //     +text_edit key='label'
-        //     +text_edit key='icon'
-        //     if icon
-        //         i.big.icon(class=icon)
-        //     // if is_reference
-    
+              //- if is_reference
+        
         //     +single_doc_edit key='ref_model' ref_model='model' ref_key='slug' label='Referenced model (if ref)'
         //     .ui.divider
 
@@ -510,6 +511,7 @@ template(name='children_view')
 
 template(name='child_view')
     each fields
+        .ui.header hi
         // if field_template
         //     .ui.header field template #{field_template}
         // else 
