--- a/client/profile/user_messages.jade
+++ b/client/profile/user_messages.jade
@@ -2,8 +2,8 @@
 template(name='user_messages')
     .ui.styled.fluid.profile_block.accordion
         .active.title
-            .ui.inline.header 
-                i.mail.small.icon
+            .ui.inline.grey.header 
+                i.mail.icon
                 |User Messages
         .active.content
             if currentUser
