--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -92,6 +92,7 @@ template(name='user_card')
 
 template(name='big_user_card')
     with user
+        //- .ui.horizontal.card
         .ui.card
             .image
                 img.ui.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
