--- a/client/nav.jade
+++ b/client/nav.jade
@@ -4,7 +4,7 @@ template(name='nav')
         //-     i.large.sidebar.icon
         if is_loading
             .icon.item
-                i.big.loading.yin.yang.icon
+                i.big.grey.loading.yin.yang.icon
         else
             a.icon.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
                 i.large.home.icon
