--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -2,7 +2,7 @@ template(name='delta')
     with current_model
         .ui.stackable.padded.grid
             .row
-                .eight.wide.column.scrolling
+                .six.wide.column.scrolling
                     .ui.right.aligned.inline.header
                         i.icon(class=icon)
                         | #{title}
@@ -36,7 +36,7 @@ template(name='delta')
                             
                     each current_delta.facets
                         +facet
-                .eight.wide.column.scrolling
+                .ten.wide.column.scrolling
                     each current_delta.result_ids
                         +delta_result
                 
